AOKP custom system animations (2/2)
ported fom here: http://gerrit.aokp.co/#/c/12305/

Thanks to Steve Spear

PS2: Clean tabs
PS3: Some string fixes

Change-Id: Ib763774f8981aaead461bddc80c9a10b24c3959c

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -103,6 +103,12 @@
             android:title="@string/screen_animation_off_title"
             android:defaultValue="true" />
 
+        <PreferenceScreen
+            android:id="@+id/animations"
+            android:title="@string/title_animation_controls"
+            android:summary="@string/header_summary_animation"
+            android:fragment="com.android.settings.cyanogenmod.fragments.AnimationControls" />
+
         <ListPreference
             android:key="screen_animation_style"
             android:title="@string/screen_animation_style_title"
