[2/2] Settings: Add lockscreen ring battery setting Change-Id: Ia07ecc1feedee71b8ea217c53244fdef9ff1bc18

--- a/res/values/dcm_strings.xml
+++ b/res/values/dcm_strings.xml
@@ -533,4 +533,7 @@
     <string name="pref_scrollingcache_default_disable">Default disable</string>
     <string name="pref_scrollingcache_force_disable">Force disable</string>
 
+    <!-- Lockscreen battery ring -->
+    <string name="battery_around_lockscreen_ring">Battery around unlock ring</string>
+
 </resources>
