settings: quicksettings: allow flip animation on clicking a tile (2/2) ported from BeerGang@e096896
Change-Id: I754b6194312bc93b8c876db4edf94fd4310363a5

--- a/res/values/dcm_strings.xml
+++ b/res/values/dcm_strings.xml
@@ -551,4 +551,8 @@
     <!-- Lockscreen battery ring -->
     <string name="battery_around_lockscreen_ring">Battery around unlock ring</string>
 
+    <!-- QuickSettings fliptiles -->
+    <string name="flip_qs_tiles_title">Flip tiles</string>
+    <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
+
 </resources>
