Settings: Glowpad Torch (3/3) PS2: String edit & remove from devices without torch.
------------------------------------------
PS2: Added Author
PS3: Delete whitespaces
PS4: Fix tabs
PS5: Commenting out some codes for now. Temp fix.
PS6: Add back missing codes, correct remove preference from Glowpadtorch and also add missing patch-set 2 and patch-set 4 messages.

Change-Id: I78851464c41d7e6c06d835f9dda2bb24ce4da509

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -111,4 +111,9 @@
 
     </PreferenceCategory>
 
+    <CheckBoxPreference
+        android:key="lockscreen_torch"
+        android:title="@string/lockscreen_glowpad_torch_title"
+        android:summary="@string/lockscreen_glowpad_torch_summary" />
+
 </PreferenceScreen>
