--- a/res/values/dcm_strings.xml
+++ b/res/values/dcm_strings.xml
@@ -109,6 +109,10 @@
     <string name="lock_before_unlock_title">Show slider before secure unlock</string>
     <string name="lock_before_unlock_summary">Show slider lockscreen before secure unlock mechanism</string>
 
+    <!-- Lockscreen Torch settings -->
+    <string name="lockscreen_glowpad_torch_title">Slider torch</string>
+    <string name="lockscreen_glowpad_torch_summary">Double-tap and hold the slider to start torch</string>
+
     <!--  Recent clear all -->
     <string name="recent_clear_all_button">Recent clear all button</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
