--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -95,6 +95,13 @@
         android:fragment="com.android.settings.ThemeSettings"
         android:icon="@drawable/prd_ic_themepacks" />
 
+    <!-- TRDS -->
+    <header
+        android:id="@+id/themes_settings"
+        android:fragment="com.android.settings.crdroid.themes.ThemeSettings"
+        android:icon="@drawable/ic_settings_trds"
+        android:title="@string/theme_settings_title" />
+
     <!-- System UI -->
     <header
         android:id="@+id/system_settings"
