--- a/res/values/dcm_attrs.xml
+++ b/res/values/dcm_attrs.xml
@@ -24,4 +24,10 @@
         <attr name="unitsRight" format="string|reference" />
     </declare-styleable>
 
+    <declare-styleable name="NEWSeekBarPreference">
+        <attr name="maximum" format="integer" />
+        <attr name="minimum" format="integer" />
+        <attr name="interval" format="integer" />
+    </declare-styleable>
+
 </resources>
