--- a/res/values/dcm_arrays.xml
+++ b/res/values/dcm_arrays.xml
@@ -418,6 +418,18 @@
         <item>70</item>
     </string-array>
 
+    <string-array name="recent_panel_expanded_mode_entries">
+        <item>@string/recent_panel_expanded_mode_auto</item>
+        <item>@string/recent_panel_expanded_mode_always</item>
+        <item>@string/recent_panel_expanded_mode_never</item>
+    </string-array>
+
+    <string-array name="recent_panel_expanded_mode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- long press back to kill configurable timeout -->
     <string-array name="kill_app_longpress_timeout_entries">
         <item>@string/timeout_2000</item>
