--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -97,8 +97,8 @@
     <string name="lock_before_unlock_title">Show slider before secure unlock</string>
     <string name="lock_before_unlock_summary">Show slider lockscreen before secure unlock mechanism</string>
 
-    <!--  Recents clear all -->
-    <string name="recents_clear_all_button">Recents clear all button</string>
+    <!--  Recent clear all -->
+    <string name="recent_clear_all_button">Recent clear all button</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
     <string name="show_recent_clear_all_button_summary">Tick to show or untick to hide the clear all button within the recent applications screen</string>
     <string name="recent_clear_all_button_location_title">Clear all button position</string>
