--- a/res/values/dcm_strings.xml
+++ b/res/values/dcm_strings.xml
@@ -555,4 +555,7 @@
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
 
+    <!-- Sound volumes panel -->
+    <string name="volume_keys_will_not_exit_silent_mode">Volume keys will not exit silent mode</string>
+
 </resources>
