--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -45,6 +45,11 @@
             android:summary="@string/lockscreen_target_summary"
             android:title="@string/lockscreen_target_title" />
 
+        <com.android.settings.cyanogenmod.SystemSettingCheckBoxPreference
+	    android:key="double_tap_lockscreen_sleep_gesture"
+	    android:title="@string/lockscreen_double_tap_sleep_title"
+	    android:defaultValue="false" />
+
         <CheckBoxPreference
             android:key="lock_before_unlock"
             android:title="@string/lock_before_unlock_title"
